@@ -137,6 +137,7 @@ struct net_bridge_port
 
 	unsigned long 			flags;
 #define BR_HAIRPIN_MODE		0x00000001
+#define BR_ISOLATE_MODE		0x00000002
 #define BR_MULTICAST_FAST_LEAVE	0x00000008
 #define BR_MULTICAST_TO_UCAST	0x00000010
 
