@@ -1103,6 +1103,7 @@
 2) goahead: use 3600 secs as default rekey interval for new BSSIDs.<br>
 3) goahead: add ipv6 interfaces adresses to statisctic page.<br>
 4) goahead: show dgw interface name if dgw add over if without ip adress at next hop.<br>
+5) kernel: net: bridge: ability to fast isolation any port w/o ebtables.<br>
 <br>
 <br>
 <b>TODO:</b><br>
